# STDC-STM32-rs

./: .gitattributes  .gitignore  .nvim.lua  Cargo.toml  DEBUGGING.md  Embed.toml  Justfile  LICENSE  memory.x  probe-rs-cmd
.cargo/: config.toml
.github/workflows/: rust.yml
results/rtt-live-sim-20260530-191559.90m-10min.tables/: decision.csv  manifest.txt  summary.csv
results/rtt-live-sim-20260530-191559.clean.90m-10min.tables/: decision.csv  manifest.txt  profile.csv
results/rtt-live-sim-20260530-210420.50m-15min.tables/: decision.csv  manifest.txt  profile.csv
results/rtt-live-sim-20260530-210420.clean.50m-15min.tables/: decision.csv  manifest.txt
results/rtt-live-sim-20260530-220547.20m-2min.tables/: decision.csv  manifest.txt  profile.csv
results/rtt-live-sim-20260530-220547.clean.20m-2min.tables/: decision.csv  manifest.txt  summary.csv
results/rtt-live-sim-exp-20260531-171554.20m-2min.tables/: decision.csv  manifest.txt
results/rtt-live-sim-exp-20260531-171554.clean.20m-2min.tables/: decision.csv  manifest.txt
results/rtt-live-sim-exp-20260531-181920.50m-15min.tables/: decision.csv  manifest.txt  profile.csv
results/rtt-live-sim-exp-20260531-181920.clean.50m-15min.tables/: decision.csv  manifest.txt  summary.csv
results/rtt-live-sim-exp-20260531-192431.90m-10min.tables/: decision.csv  manifest.txt
results/rtt-live-sim-exp-20260531-192431.clean.90m-10min.tables/: decision.csv  manifest.txt  summary.csv
results/rtt-live-sim-fixed-20260531-130559.20m-2min.tables/: decision.csv  manifest.txt
results/rtt-live-sim-fixed-20260531-130559.clean.20m-2min.tables/: decision.csv  manifest.txt  summary.csv
results/rtt-live-sim-fixed-20260531-132334.50m-15min.tables/: decision.csv  manifest.txt  profile.csv
results/rtt-live-sim-fixed-20260531-132334.clean.50m-15min.tables/: decision.csv  manifest.txt  profile.csv
results/rtt-live-sim-fixed-20260531-142327.90m-10min.tables/: decision.csv  manifest.txt  profile.csv
results/rtt-live-sim-fixed-20260531-142327.clean.90m-10min.tables/: decision.csv  manifest.txt  profile.csv  summary.csv
scripts/: embed_live_sim_log.sh  extract_bench_tables.py  fix_decision_csv.py  generate_flash_profile_diff.py
src/: algorithms.rs  barometric.rs  benchmarking.rs  components.rs  constants.rs  display.rs  dive_log.rs  flash.rs  lib.rs  main.rs  ms5849.rs  pressure_unit.rs  spi.rs  stm32.rs  types.rs
src/algorithms/: helpers.rs  profile_emulation.rs  rate_algorithm.rs
src/components/: battery_status.rs  bluetooth.rs  display.rs  (+5 more)
(+93 files in other folders)
