[package]
name = "stdc_stm32_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
# embedded-hal = "0.2"
stm32l4xx-hal = { version = "0.7.1", features = ["rt", "stm32l486"] }
rtt-target = { version="0.3.1",  features = ["cortex-m"] }
panic-halt = "0.2.0"
panic-probe = "0.3"
libm = "0.2.15"
thalmann = { git = "https://github.com/SebastianThomas/STDC-thalmann.git", version="0.1.8", features = ["thalmann"] }
num = { version = "0.4.3", default-features = false, features = ["libm"] }

