[package]
name = "stdc_stm32_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
# embedded-hal = "0.2"
stm32l4xx-hal = { version = "0.7.1", features = ["rt", "stm32l486"] }
rtt-target = { version = "0.6", features = ["defmt"] }
panic-halt = "1.0"
panic-probe = { version = "1.0" , features = ["print-rtt"] }
defmt = "1.0"
libm = "0.2.15"
thalmann = { git = "https://github.com/SebastianThomas/STDC-thalmann.git", version="0.1.10", features = ["thalmann"] }
num = { version = "0.4.3", default-features = false, features = ["libm"] }

[[bin]]
name = "stdc_stm32_rs"
path = "src/main.rs"
test = false
