[package]
name = "stdc_stm32_rs"
version = "0.1.0"
edition = "2024"
resolver = "2"

[lib]
name = "stdc_stm32_rs"
path = "src/lib.rs"
test = true
doctest = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
# embedded-hal = "0.2"
rtt-target = { version = "0.6", features = ["defmt"] }
panic-halt = "1.0"
panic-probe = { version = "1.0" , features = ["print-rtt"] }
defmt = "1.0"
libm = "0.2.15"
thalmann = { git = "https://github.com/SebastianThomas/STDC-thalmann.git", version="0.1.12", features = ["thalmann"] }
num = { version = "0.4.3", default-features = false, features = ["libm"] }
nb = "1.1.0"
fixed = "1.31.0"
heapless = "0.9.2"
rtic = { version = "2.2.0", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.1.0", features = ["stm32l486rg", "stm32_tim5"] }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
stm32l4xx-hal = { version = "0.7.1", default-features = false, features = ["rt", "stm32l486"] }

[[bin]]
name = "stdc_stm32_rs"
path = "src/main.rs"
test = false
